@@ -27,7 +27,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -41,7 +40,7 @@ import static com.nageoffer.ai.ragent.rag.constant.RAGConstant.CONTEXT_FORMAT_PA
 /**
  * RAG Prompt 编排服务
  * <p>
- * 根据检索结果场景（KB / MCP / Mixed）选择模板，并构造最终发送给 LLM 的消息序列
+ * 根据知识库检索结果选择模板，并构造发送给 LLM 的消息序列
  */
 @Service
 @RequiredArgsConstructor
@@ -62,12 +61,15 @@ public class RAGPromptService {
      * citationEligible=false 时无条件跳过引用规则拼接（Agent 模式检索门面无来源编号，不读引用开关）
      */
     private String buildSystemPrompt(PromptContext context, boolean citationEligible) {
-        PromptBuildPlan plan = plan(context);
-        String template = StrUtil.isNotBlank(plan.getBaseTemplate())
-                ? plan.getBaseTemplate()
-                : defaultTemplate(plan.getScene());
+        if (!context.hasKb()) {
+            throw new IllegalStateException("PromptContext requires KB context");
+        }
+        String configured = configuredTemplate(context.getKbIntents(), context.getEligibleIntentIds());
+        String template = StrUtil.isNotBlank(configured)
+                ? configured
+                : agentPromptResolver.resolve(AgentPromptSlot.KB_ANSWER);
         String systemPrompt = StrUtil.isBlank(template) ? "" : PromptTemplateUtils.cleanupPrompt(template);
-        if (!citationEligible || !context.hasKb() || !Boolean.TRUE.equals(ragConfigProperties.getCitationEnabled())) {
+        if (!citationEligible || !Boolean.TRUE.equals(ragConfigProperties.getCitationEnabled())) {
             return systemPrompt;
         }
 
@@ -124,8 +126,8 @@ public class RAGPromptService {
         return messages;
     }
 
-    private PromptPlan planPrompt(List<NodeScore> intents, Set<String> eligibleIntentIds) {
-        List<NodeScore> safeIntents = intents == null ? Collections.emptyList() : intents;
+    private String configuredTemplate(List<NodeScore> intents, Set<String> eligibleIntentIds) {
+        List<NodeScore> safeIntents = intents == null ? List.of() : intents;
         Map<String, NodeScore> eligibleById = new LinkedHashMap<>();
         for (NodeScore intent : safeIntents) {
             if (intent == null || intent.getNode() == null) {
@@ -137,82 +139,11 @@ public class RAGPromptService {
             }
             eligibleById.putIfAbsent(intentId, intent);
         }
-        List<NodeScore> eligibleIntents = new ArrayList<>(eligibleById.values());
-
-        if (eligibleIntents.isEmpty()) {
-            return new PromptPlan(Collections.emptyList(), null);
+        if (eligibleById.size() != 1) {
+            return null;
         }
-
-        if (eligibleIntents.size() == 1) {
-            IntentNode only = eligibleIntents.get(0).getNode();
-            String tpl = StrUtil.emptyIfNull(only.getPromptTemplate()).trim();
-            if (StrUtil.isNotBlank(tpl)) {
-                return new PromptPlan(eligibleIntents, tpl);
-            }
-        }
-        return new PromptPlan(eligibleIntents, null);
-    }
-
-    private PromptBuildPlan plan(PromptContext context) {
-        if (context.hasMcp() && !context.hasKb()) {
-            return planMcpOnly(context);
-        }
-        if (!context.hasMcp() && context.hasKb()) {
-            return planKbOnly(context);
-        }
-        if (context.hasMcp() && context.hasKb()) {
-            return planMixed(context);
-        }
-        throw new IllegalStateException("PromptContext requires MCP or KB context.");
-    }
-
-    private PromptBuildPlan planKbOnly(PromptContext context) {
-        PromptPlan plan = planPrompt(context.getKbIntents(), context.getEligibleIntentIds());
-        return PromptBuildPlan.builder()
-                .scene(PromptScene.KB_ONLY)
-                .baseTemplate(plan.getBaseTemplate())
-                .mcpContext(context.getMcpContext())
-                .kbContext(context.getKbContext())
-                .question(context.getQuestion())
-                .build();
-    }
-
-    private PromptBuildPlan planMcpOnly(PromptContext context) {
-        List<NodeScore> intents = context.getMcpIntents();
-        String baseTemplate = null;
-        if (CollUtil.isNotEmpty(intents) && intents.size() == 1) {
-            IntentNode node = intents.get(0).getNode();
-            String tpl = StrUtil.emptyIfNull(node.getPromptTemplate()).trim();
-            if (StrUtil.isNotBlank(tpl)) {
-                baseTemplate = tpl;
-            }
-        }
-
-        return PromptBuildPlan.builder()
-                .scene(PromptScene.MCP_ONLY)
-                .baseTemplate(baseTemplate)
-                .mcpContext(context.getMcpContext())
-                .kbContext(context.getKbContext())
-                .question(context.getQuestion())
-                .build();
-    }
-
-    private PromptBuildPlan planMixed(PromptContext context) {
-        return PromptBuildPlan.builder()
-                .scene(PromptScene.MIXED)
-                .mcpContext(context.getMcpContext())
-                .kbContext(context.getKbContext())
-                .question(context.getQuestion())
-                .build();
-    }
-
-    private String defaultTemplate(PromptScene scene) {
-        return switch (scene) {
-            case KB_ONLY -> agentPromptResolver.resolve(AgentPromptSlot.KB_ANSWER);
-            case MCP_ONLY -> agentPromptResolver.resolve(AgentPromptSlot.MCP_ANSWER);
-            case MIXED -> agentPromptResolver.resolve(AgentPromptSlot.MIXED_ANSWER);
-            case EMPTY -> "";
-        };
+        IntentNode only = eligibleById.values().iterator().next().getNode();
+        return StrUtil.trimToNull(only.getPromptTemplate());
     }
 
     private String buildUserQuestion(String question, List<String> subQuestions) {
@@ -239,20 +170,12 @@ public class RAGPromptService {
     }
 
     /**
-     * 将 MCP 和 KB 证据合并为一个文本块，各自有值时用对应 section 渲染
+     * 将知识库证据渲染为一个文本块
      */
     private String buildEvidenceBody(PromptContext context) {
-        StringBuilder sb = new StringBuilder();
-        if (StrUtil.isNotBlank(context.getMcpContext())) {
-            sb.append(renderSection("mcp-evidence", Map.of("body", context.getMcpContext().trim())));
-        }
-        if (StrUtil.isNotBlank(context.getKbContext())) {
-            if (!sb.isEmpty()) {
-                sb.append("\n\n");
-            }
-            sb.append(renderSection("kb-evidence", Map.of("body", context.getKbContext().trim())));
-        }
-        return sb.toString().trim();
+        return StrUtil.isBlank(context.getKbContext())
+                ? ""
+                : renderSection("kb-evidence", Map.of("body", context.getKbContext().trim())).trim();
     }
 
     private String renderSection(String section, Map<String, String> slots) {
